Step products endpoints
